--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "dependencies": {
     "gatsby": "^2.13.53",
+    "gatsby-image": "^2.2.8",
     "gatsby-plugin-sass": "^2.1.4",
+    "gatsby-plugin-sharp": "^2.2.11",
+    "gatsby-source-filesystem": "^2.1.9",
+    "gatsby-transformer-sharp": "^2.2.6",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
